--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -9,5 +9,22 @@
 
   <br>
 
+  <label>Choose and existing pet:</label>
+
+  <br>
+
+  <%@pets.each do |pet|%>
+<input type="checkbox" name="owner[pet_ids][]" value="<%=pet.id%>" id="<%=pet.id%>"><%=pet.name%></input>
+<% end %>
+
+  <br>
+
+  <label>and/or create a new pet:</label>
+  <input type="text" name="pet[name]">
+  
+  <br>
+
   <input type="submit" value="Create Owner">
 </form>
+
+
