--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,22 @@
 <h1>Create a new Pet</h1>
 
+<form method="post" action="/pets">
+<label>Pet Name:</label>
+<input type="text" name="pet[name]" id="pet_name">
+
+<br>
+<label>Choose an existing Owner:</label>
+<%@owners.each do |owner|%>
+<input type="checkbox" id="<%=owner.id%>" name="pet[owner_id]" value="<%=owner.id%>"><%=owner.name%></input>
+<%end%>
+
+<br>
+
+<label>Or Create a new Owner</label>
+<input type="text" name="owner[name]" id="owner_name">
+
+<br>
+
+<input type="submit" value="Create Pet">
+</form>
+
